--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "start:dev": "nodemon server"
+    "start:dev": "nodemon server",
+    "seed": "node database/seed.js"
   },
   "nodemonConfig": {
     "watch": "server/*"
@@ -26,6 +27,7 @@
     "body-parser": "^1.19.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
+    "faker": "^4.1.0",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "react": "^16.12.0",
