--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/HRR43TeamHan/Booking#readme",
   "dependencies": {
+    "@emotion/core": "^10.0.27",
+    "@emotion/styled": "^10.0.27",
     "body-parser": "^1.19.0",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
@@ -38,6 +40,7 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@emotion/babel-preset-css-prop": "^10.0.27",
     "babel-loader": "^8.0.6",
     "jest": "^25.1.0",
     "nodemon": "^2.0.2",
